--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-340.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-2.76MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-466.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 未知国家-2.19MB/s(Youtube:不良林), server: us03.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us03.gogogoo.cyou}}
-  - {name: 🇯🇵 日本-962.1KB/s(Youtube:不良林), server: 164.70.68.67, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇦 加拿大-3.23MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-195.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-384.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-397.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-181.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-372.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-520.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-314.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-747.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.59MB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-962.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
