--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-195.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-384.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-397.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-181.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 未知国家-8.71MB/s(Youtube:不良林), server: 103.176.111.247, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.176.111.247}}
+  - {name: 🇨🇳 中国-444.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-527.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇻🇳 越南-7.32MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
   - {name: 🇨🇳 中国-372.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-520.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: hnyd.52147.top, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 未知国家-8.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
