--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-8.71MB/s(Youtube:不良林), server: 103.176.111.247, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.176.111.247}}
-  - {name: 🇨🇳 中国-444.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-3.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-527.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇻🇳 越南-7.32MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-372.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-520.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-314.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-276.8KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇨🇳 中国-203.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-387.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇻🇳 越南-7.26MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
   - {name: 🇨🇳 中国-747.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.55MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-336.6KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-747.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-336.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
