--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-463.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-527.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-238.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-894.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-4.07MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-2.73MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-372.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇬🇧 英国-591.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.81MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
